force-app/main/default/objects/Application__c/Application__c.object-meta.xml
<CustomObject>
    <description>Represents an Enterprise Application. Part of the Portfolio Management data model in the Manage Your Lifecycle App.</description>
    <label>Application</label>
    <nameField>
        <label>Application</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>