force-app/main/default/objects/Application__c/fields/Also_Known_As__c.field-meta.xml
<CustomField>
    <fullName>Also_Known_As__c</fullName>
    <inlineHelpText>Sometimes a business will create a nickname or external facing name for a business application.</inlineHelpText>
    <label>Also Known As</label>
    <length>255</length>
    <type>Text</type>
</CustomField>