force-app/main/default/objects/Application__c/fields/Application_Owner__c.field-meta.xml
<CustomField>
    <fullName>Application_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>