force-app/main/default/objects/Application__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Which departments use this application? Which category of needs does this application meet?</description>
    <inlineHelpText>Which departments use this application? Which category of needs does this application meet?</inlineHelpText>
    <label>Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Departments</valueSetName>
    </valueSet>
</CustomField>