force-app/main/default/objects/Application__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <description>How much does this app cost? If free, enter 0 here.</description>
    <inlineHelpText>How much does this app cost? If free, enter 0 here.</inlineHelpText>
    <label>Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>