force-app/main/default/objects/Application__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>Date this application is set to expire, if applicable.</description>
    <inlineHelpText>Date this application is set to expire, if applicable.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>