force-app/main/default/objects/Application__c/fields/Fitness__c.field-meta.xml
<CustomField>
    <fullName>Fitness__c</fullName>
    <description>What is the level of fitness (health) for this application?</description>
    <inlineHelpText>What is the level of fitness (health) for this application?</inlineHelpText>
    <label>Fitness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Scale</valueSetName>
    </valueSet>
</CustomField>