force-app/main/default/objects/Application__c/fields/Fitness_Description__c.field-meta.xml
<CustomField>
    <fullName>Fitness_Description__c</fullName>
    <description>Describe why you scored this application with the fitness level above.</description>
    <inlineHelpText>Describe why you scored this application with the fitness level above.</inlineHelpText>
    <label>Fitness Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>