force-app/main/default/objects/Application__c/fields/Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date__c</fullName>
    <description>Date app is set to renew, if applicable.</description>
    <inlineHelpText>Date app is set to renew, if applicable.</inlineHelpText>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>