force-app/main/default/objects/Application__c/fields/Salesforce_Add_On_Type__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Add_On_Type__c</fullName>
    <label>Salesforce Add-On Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Native Add-On</fullName>
            </value>
            <value>
                <fullName>Managed Package</fullName>
            </value>
            <value>
                <fullName>Unmanaged Package</fullName>
            </value>
            <value>
                <fullName>API Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>