force-app/main/default/objects/Application__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <label>Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Quarter</fullName>
            </value>
            <value>
                <fullName>Bi-Annual</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>2-Year</fullName>
            </value>
            <value>
                <fullName>3-Year</fullName>
            </value>
            <value>
                <fullName>4-Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>