force-app/main/default/objects/Application__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>ERP</fullName>
            </value>
            <value>
                <fullName>OMS</fullName>
            </value>
            <value>
                <fullName>CMS</fullName>
            </value>
            <value>
                <fullName>LMS</fullName>
            </value>
            <value>
                <fullName>Marketing Automation</fullName>
            </value>
            <value>
                <fullName>Prospect Database</fullName>
            </value>
            <value>
                <fullName>Service_Helpdesk</fullName>
                <label>Service / Helpdesk</label>
            </value>
            <value>
                <fullName>eSignature &amp; Agreement Mgmt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>