force-app/main/default/objects/Application__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>What is the level of value this application brings to the business?</description>
    <inlineHelpText>What is the level of value this application brings to the business?</inlineHelpText>
    <label>Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Scale</valueSetName>
    </valueSet>
</CustomField>