force-app/main/default/objects/Application__c/fields/Value_Description__c.field-meta.xml
<CustomField>
    <fullName>Value_Description__c</fullName>
    <description>Describe why you scored this application with the value level above.</description>
    <inlineHelpText>Describe why you scored this application with the value level above.</inlineHelpText>
    <label>Value Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>